--- a/EasyDoorApp/app/src/main/res/values/strings.xml
+++ b/EasyDoorApp/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">EasyDoorApp</string>
     <string name="add_add_button">Add Button</string>
     <string name="add_hint">Resident name</string>
+    <string name="add_refreshing">Refreshing</string>
+    <string name="add_please_wait">Please wait</string>
 </resources>
