MainActivity on camera can now successfully connect to Rekognition

--- a/EasyDoorCamera/app/src/main/res/values/strings.xml
+++ b/EasyDoorCamera/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">EasyDoorTest</string>
+    <string name="refreshing">Refreshing</string>
+    <string name="please_wait">Please wait</string>
 </resources>
