--- a/EasyDoorCamera/app/src/main/res/values/strings.xml
+++ b/EasyDoorCamera/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">EasyDoorTest</string>
     <string name="refreshing">Refreshing</string>
     <string name="please_wait">Please wait</string>
+    <string name="loading">Loading all residents</string>
 </resources>
